--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -23,14 +23,13 @@ jobs:
           ARM_ACCESS_KEY: ${{ secrets.AZ_STO_KEY }}
         run: |
           cd quickstart/azure
-          echo """terraform {
-  backend "azurerm" {
-    resource_group_name   = "var.azure_rg"
-    storage_account_name  = "var.azure_sto"
-    container_name        = "tstate"
-    key                   = "terraform.tfstate"
-  }
-}""" > azureblog.tf
+          echo 'terraform {' > azureblog.tf
+          echo 'backend "azurerm" {' >> azureblog.tf
+          echo 'resource_group_name   = "var.azure_rg"' >> azureblog.tf
+          echo 'storage_account_name  = "var.azure_sto"' >> azureblog.tf
+          echo 'container_name        = "tstate"' >> azureblog.tf
+          echo 'key                   = "terraform.tfstate" >> azureblog.tf
+          echo ' } }' >> azureblog.tf
           terraform init
           
       - name: Deploy
