--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -23,13 +23,7 @@ jobs:
           ARM_ACCESS_KEY: ${{ secrets.AZ_STO_KEY }}
         run: |
           cd azure
-          echo 'terraform {' > azureblog.tf
-          echo 'backend "azurerm" {' >> azureblog.tf
-          echo 'resource_group_name   = "var.azure_rg"' >> azureblog.tf
-          echo 'storage_account_name  = "var.azure_sto"' >> azureblog.tf
-          echo 'container_name        = "tstate"' >> azureblog.tf
-          echo 'key                   = "terraform.tfstate" >> azureblog.tf
-          echo ' } }' >> azureblog.tf
+          cp ../azureblog.tf .
           terraform init
           
       - name: Deploy
